Revert "no message"
This reverts commit 888ac341862c919dd75da907745402274af547b7.

--- a/screen/팝업(가로300세로400).html
+++ b/screen/팝업(가로300세로400).html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         #wrap{
-            width: 800px;
+            width: 300px;
             height: 400px;
             border: 1px solid black;
         }
@@ -31,37 +31,28 @@
         <div id="searchBox">
             <table id="search">
                 <tr>
-                    <td>주문기간</td>
-                    <td colspan="2" style="width: 80px;"><input type="date"
-                        id="reqInput" style="width: 100%;" /></td>
-                    <td>~</td>
-                    <td><input type="date" id="reqInput" style="width: 100%;" /></td>
-                    <td></td>
+                    <td>검색1</td>
+                    <td><input type="text"/></td>
+                </tr>
+                <tr>
+                    <td>검색2</td>
+                    <td><input type="text"/></td>
                 </tr>
             </table>
             <div id="button">
-                <button>조회</button>
-                <button>선택적용</button>
-                <button>취소</button>
+                <button>버튼1</button>
+                <button>버튼2</button>
+                <button>버튼3</button>
             </div>
         </div>
         <div id="view">
             <table style="width: 100%;">
-                    <thead align="center" style="background-color: gray">
-                        <td><input type="checkbox" name="content"
-                            onclick="selectAll(this)" /></td>
-                        <td>계획일</td>
-                        <td>품번</td>
-                        <td>품명</td>
-                        <td>규격</td>
-                        <td>단위</td>
-                        <td>순서</td>
-                        <td>출하예정일</td>
-                        <td>납기일</td>
-                        <td>계획수량</td>
-                        <td>고객</td>
-                        <td>비고</td>			
-                    </thead>
+                <tr>
+                    <td>정보</td>
+                    <td>정보</td>
+                    <td>정보</td>
+                    <td>정보</td>
+                    <td>정보</td>
                 </tr>
             </table>
         </div>
